Update Лекция 1. Для чего нужен язык С++ и где его используют в вебе.md

--- a/Лекция 1. Для чего нужен язык С++ и где его используют в вебе.md
+++ b/Лекция 1. Для чего нужен язык С++ и где его используют в вебе.md
@@ -41,10 +41,13 @@ INTERACTIVE 5-10 min
 - Утилиты для сложных вычисленних, иногда даже на клиенте
 - другие :)
 
+А в конце разберем наверное самую популярную сферу на текущий момент, это ИИ и все, что с ним связанно. Я для простоты будут все называть исскуственным интелектом, под этим я имею ввиду и LLM, AI, NL и др. Казалось бы, что в теме ИИ только 1 босс и это питон, так как почти все популярные библиотеки написаны на питоне и я честно так и думал, но по изучав тему подробнее узнал, что питон это грубо говоря фронтенд для ИИ, а все основные вычисления происходят в программах написанных приемущественно на C++. Почему так? Ну тут есть несколько причин и как всегда самая банальная причина - это перфоманс, но не все тут чисто. Как мы знаем для обучения ИИ в основном используют GPU, и у нас есть гигант рынка в этом направление - NVIDIA. А NVIDIA в свою очередь долгие годы развивала свою программно аппаратную платформу/архитектуру, позволяющую использовать GPU для задач общего назначения, а не только для графики. А куда как раз написан на C++, в следствии чего все низко-уровневые программы должны быть тоже написаны на этом языке. А как пример могу привести, что такие популярные библиотеки как PyTorch и TensorFlow написаны внутри на C++, а питон выступает лишь в роли оболочки.
+
 Ну и разберем последнее, но не по значимости популярное направление для использования C++ - это Операционные системы. Скажу честно  этой теме у меня меньше всего экспертизы, поэтому мы просто пробежимся по тому, где он используется:
 - драйвера
 - коммандные утилиты
 - микроконтроллеры
+
 
 ## Заключение:
 Итак, мы в текущей лекции разобрали основные места, где может использоваться C++ и почему его стоит или не стоит там изучать. Для чего все это? Основная цель показать вам, что этот язык не безнадежный и для чего его стоит учить, может кто-то из вас заинтересуется каким-то из направлений и начнет путь С++ developer'a. Ну и конечно хочется сказать, что не нужно выбирать технологии просто так, потому что "ну это круто", у всего есть свои плюсы и минусы и нужно исходить в первую очередь из ваших потребностей. 
